# casADi_motion_planner

./: CMakeLists.txt  README.md  package.xml
include/nmpc_motion_planner/: casadi_mpc_template.hpp  nmpc_prob.hpp
src/: nmpc_planner.cpp  nmpc_prob.cpp
